More Sonar fixes